Bug 103224 - Active color appears as black though rgb values show the correct color
Summary: Active color appears as black though rgb values show the correct color
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Katarina Behrens (Inactive)
URL:
Whiteboard: target:5.4.0
Keywords: bibisected, bisected, implementationError, regression
: 103436 (view as bug list)
Depends on:
Blocks: Area-Fill-Tab-Color
  Show dependency treegraph
 
Reported: 2016-10-14 19:45 UTC by Yousuf Philips (jay) (retired)
Modified: 2017-10-18 11:13 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2016-10-14 19:45:09 UTC
Steps:
1) Open writer
2) Draw a shape
3) Context Menu > Area
4) Notice that black is selected in the palette and black is colored in the active preview box but the rgb values are for blue, as they should be.

Version: 5.3.0.0.alpha0+
Build ID: 45a7137c6796f33fbf5b8f7cb64e293260d991cb
CPU Threads: 2; OS Version: Linux 3.19; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-10-13_23:38:06
Locale: en-US (en_US.UTF-8); Calc: group
Comment 1 Julien Nabet 2016-10-14 20:00:45 UTC
On pc Debian x86-64 with master sources updated yesterday, I could reproduce this.
Comment 2 Yousuf Philips (jay) (retired) 2016-10-23 18:59:43 UTC
*** Bug 103436 has been marked as a duplicate of this bug. ***
Comment 3 raal 2016-12-28 19:56:25 UTC
This seems to have begun at the below commit.
Adding Cc: to Rishabh Kumar; Could you possibly take a look at this one? Thanks
 fc32aa6cf1d76396b30763b7bcfcecb378031db0 is the first bad commit
commit fc32aa6cf1d76396b30763b7bcfcecb378031db0
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Wed Oct 12 05:20:36 2016 -0700

    source 686349476e03f951f4a9ff9755b9f71951b64ea5

author	Rishabh Kumar <kris.kr296@gmail.com>	2016-08-22 11:18:05 (GMT)
committer	Katarina Behrens <Katarina.Behrens@cib.de>	2016-10-12 08:36:13 (GMT)
commit 686349476e03f951f4a9ff9755b9f71951b64ea5 (patch)
tree 7cb559cca9cf88dc0a2e2a957244701ab0b4fe60
parent da01e9ec5dfb7787b4a3669486b3940590933850 (diff)
[GSoC] Move all fill style tabs inside area tab
Comment 4 Doctor Rover 2017-02-08 19:58:03 UTC
The bug is still present.
Version: 5.3.0.3
Build ID: 1:5.3.0~rc3-0ubuntu1~yakkety1.1
Comment 5 Commit Notification 2017-02-20 10:30:26 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f35e6f2504384ad66b475d39849ed10987b2da53

tdf#103224: Get the initial colour right

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.