tdf#103224: Get the initial colour right

Change-Id: I59309f5b433eb7aa92d05ce7d373d69cb413b258